--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,6 @@
 {
+  "name": "helpcrunch/sentry-helper",
+  "description": "Static class for logging errors into Sentry",
   "require": {
     "sentry/sentry": "^1.8"
   }
